[gd_scene load_steps=63 format=3 uid="uid://dogtmonf6vstv"]

[ext_resource type="Script" path="res://scripts/characters/enemy_dog.gd" id="1_ai7e0"]
[ext_resource type="Texture2D" uid="uid://bob3oo8nucy31" path="res://assets/enemies/Dog/Dog.png" id="2_msjk1"]
[ext_resource type="Script" path="res://scripts/battle/hurt_box.gd" id="3_0qi0g"]
[ext_resource type="Script" path="res://scripts/battle/hit_box.gd" id="4_vj7po"]
[ext_resource type="Texture2D" uid="uid://do25ap0ds3hwk" path="res://assets/interface/heart.png" id="5_8btgg"]
[ext_resource type="Script" path="res://scripts/battle/enemy_dog_projectile_spawn.gd" id="6_7yiuv"]
[ext_resource type="PackedScene" uid="uid://cynx8wly18kdh" path="res://scenes/attacks/emeny_dog_bullet.tscn" id="6_nwuyl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_tkwno"]
atlas = ExtResource("2_msjk1")
region = Rect2(0, 0, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_adc0k"]
atlas = ExtResource("2_msjk1")
region = Rect2(144, 0, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_7wyb3"]
atlas = ExtResource("2_msjk1")
region = Rect2(288, 0, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_uo2nh"]
atlas = ExtResource("2_msjk1")
region = Rect2(432, 0, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_rmevj"]
atlas = ExtResource("2_msjk1")
region = Rect2(576, 0, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ra4ae"]
atlas = ExtResource("2_msjk1")
region = Rect2(720, 0, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ual0k"]
atlas = ExtResource("2_msjk1")
region = Rect2(864, 0, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3enb"]
atlas = ExtResource("2_msjk1")
region = Rect2(1008, 0, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_m4yj3"]
atlas = ExtResource("2_msjk1")
region = Rect2(1152, 0, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_fd34o"]
atlas = ExtResource("2_msjk1")
region = Rect2(0, 576, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_y8bl5"]
atlas = ExtResource("2_msjk1")
region = Rect2(144, 576, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_mpeqv"]
atlas = ExtResource("2_msjk1")
region = Rect2(288, 576, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ni2kb"]
atlas = ExtResource("2_msjk1")
region = Rect2(432, 576, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_g10x6"]
atlas = ExtResource("2_msjk1")
region = Rect2(576, 576, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_makv5"]
atlas = ExtResource("2_msjk1")
region = Rect2(720, 576, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_pba8l"]
atlas = ExtResource("2_msjk1")
region = Rect2(0, 288, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_4w2f7"]
atlas = ExtResource("2_msjk1")
region = Rect2(144, 288, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_v2onn"]
atlas = ExtResource("2_msjk1")
region = Rect2(288, 288, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_esrpi"]
atlas = ExtResource("2_msjk1")
region = Rect2(432, 288, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_0t0vy"]
atlas = ExtResource("2_msjk1")
region = Rect2(576, 288, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_sam44"]
atlas = ExtResource("2_msjk1")
region = Rect2(720, 288, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_w2k7i"]
atlas = ExtResource("2_msjk1")
region = Rect2(0, 384, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ypsl7"]
atlas = ExtResource("2_msjk1")
region = Rect2(144, 384, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_8j1bt"]
atlas = ExtResource("2_msjk1")
region = Rect2(288, 384, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_bklyx"]
atlas = ExtResource("2_msjk1")
region = Rect2(432, 384, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_isdrq"]
atlas = ExtResource("2_msjk1")
region = Rect2(576, 384, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ppa45"]
atlas = ExtResource("2_msjk1")
region = Rect2(720, 384, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_kp0w8"]
atlas = ExtResource("2_msjk1")
region = Rect2(864, 384, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_jxadl"]
atlas = ExtResource("2_msjk1")
region = Rect2(1008, 384, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ii1ti"]
atlas = ExtResource("2_msjk1")
region = Rect2(1152, 384, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_gc4xk"]
atlas = ExtResource("2_msjk1")
region = Rect2(1296, 384, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_theuy"]
atlas = ExtResource("2_msjk1")
region = Rect2(1440, 384, 144, 96)

[sub_resource type="AtlasTexture" id="AtlasTexture_ymuwg"]
atlas = ExtResource("2_msjk1")
region = Rect2(1584, 384, 144, 96)

[sub_resource type="SpriteFrames" id="SpriteFrames_5w2is"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_tkwno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_adc0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7wyb3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_uo2nh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rmevj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ra4ae")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ual0k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3enb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m4yj3")
}],
"loop": false,
"name": &"attack",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd34o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y8bl5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mpeqv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ni2kb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_g10x6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_makv5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fd34o")
}],
"loop": false,
"name": &"idle",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_pba8l")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4w2f7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_v2onn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_esrpi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0t0vy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_sam44")
}],
"loop": false,
"name": &"jump",
"speed": 0.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_w2k7i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ypsl7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8j1bt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bklyx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isdrq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ppa45")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kp0w8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_jxadl")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ii1ti")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gc4xk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_theuy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ymuwg")
}],
"loop": false,
"name": &"run",
"speed": 0.0
}]

[sub_resource type="Animation" id="Animation_yjofp"]
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_t7fca"]
resource_name = "enemy_animation"
length = 1.6
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"attack"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_tpiwx"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_gyrih"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"jump"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}

[sub_resource type="Animation" id="Animation_dyufc"]
resource_name = "run"
length = 2.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8, 1, 1.2, 1.4, 1.6, 1.8, 2, 2.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_820cg"]
_data = {
"RESET": SubResource("Animation_yjofp"),
"attack": SubResource("Animation_t7fca"),
"idle": SubResource("Animation_tpiwx"),
"jump": SubResource("Animation_gyrih"),
"run": SubResource("Animation_dyufc")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_wr6q3"]
animation = &"idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_poq3f"]
animation = &"jump"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_l3mo8"]
animation = &"run"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_vkuma"]
advance_mode = 2
advance_condition = &"jumping"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_xiya2"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_ipj3c"]
advance_mode = 2
advance_condition = &"on_floor"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_oom8k"]
advance_mode = 2
advance_condition = &"idle"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_n7fn3"]
advance_mode = 2
advance_condition = &"moving"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_56200"]
advance_mode = 2
advance_condition = &"jumping"

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_mi0xc"]
states/End/position = Vector2(786, 100)
states/Start/position = Vector2(205, 100)
states/idle/node = SubResource("AnimationNodeAnimation_wr6q3")
states/idle/position = Vector2(348, 100)
states/jump/node = SubResource("AnimationNodeAnimation_poq3f")
states/jump/position = Vector2(348, -25)
states/run/node = SubResource("AnimationNodeAnimation_l3mo8")
states/run/position = Vector2(512, 100)
transitions = ["idle", "jump", SubResource("AnimationNodeStateMachineTransition_vkuma"), "Start", "idle", SubResource("AnimationNodeStateMachineTransition_xiya2"), "jump", "idle", SubResource("AnimationNodeStateMachineTransition_ipj3c"), "run", "idle", SubResource("AnimationNodeStateMachineTransition_oom8k"), "idle", "run", SubResource("AnimationNodeStateMachineTransition_n7fn3"), "run", "jump", SubResource("AnimationNodeStateMachineTransition_56200")]
graph_offset = Vector2(-183, -47.6311)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_tsgc6"]
size = Vector2(32, 29)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ig6md"]
size = Vector2(28, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5oum3"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kv032"]
bg_color = Color(0.226707, 0.226708, 0.226707, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rjrd5"]
bg_color = Color(1, 0.151344, 0.108333, 1)

[node name="EnemyDog" type="CharacterBody2D"]
collision_layer = 8
collision_mask = 2
script = ExtResource("1_ai7e0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(-3, 2)
scale = Vector2(0.35, 0.35)
sprite_frames = SubResource("SpriteFrames_5w2is")
animation = &"run"
offset = Vector2(10, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_820cg")
}
autoplay = "idle"

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_mi0xc")
parameters/conditions/idle = false
parameters/conditions/jumping = false
parameters/conditions/moving = false
parameters/conditions/on_floor = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visibility_layer = 3
position = Vector2(1, 4.5)
shape = SubResource("RectangleShape2D_tsgc6")

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("3_0qi0g")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(1, 4)
shape = SubResource("RectangleShape2D_ig6md")

[node name="HitBox" type="Area2D" parent="."]
script = ExtResource("4_vj7po")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HitBox"]
position = Vector2(27, 4)
shape = SubResource("RectangleShape2D_5oum3")
disabled = true

[node name="Audio" type="Node2D" parent="."]

[node name="Health" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -3.0
offset_top = -17.5
offset_right = 37.0
offset_bottom = 22.5
grow_horizontal = 2
scale = Vector2(0.1, 0.1)

[node name="ProgressBar" type="ProgressBar" parent="Health"]
layout_mode = 0
offset_left = -122.0
offset_top = 21.0
offset_right = 170.0
offset_bottom = 50.0
theme_override_styles/background = SubResource("StyleBoxFlat_kv032")
theme_override_styles/fill = SubResource("StyleBoxFlat_rjrd5")
value = 50.0
show_percentage = false

[node name="Border" type="ColorRect" parent="Health"]
z_index = -15
layout_mode = 0
offset_left = -128.0
offset_top = 14.0
offset_right = 176.0
offset_bottom = 56.0
color = Color(0, 0, 0, 1)

[node name="TextureRect" type="TextureRect" parent="Health"]
layout_mode = 0
offset_left = -151.0
offset_top = 5.0
offset_right = 449.0
offset_bottom = 605.0
scale = Vector2(0.1, 0.1)
texture = ExtResource("5_8btgg")

[node name="Label" type="Label" parent="Health"]
visible = false
z_index = 2
layout_mode = 0
offset_left = -14.0
offset_top = 20.0
offset_right = 80.0
offset_bottom = 48.0
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 20
text = "100/100"

[node name="ProjectileSpawnRight" type="Node2D" parent="."]
position = Vector2(18, 0)
script = ExtResource("6_7yiuv")

[node name="ProjectileSpawnLeft" type="Node2D" parent="."]
position = Vector2(-17, 0)
script = ExtResource("6_7yiuv")

[node name="BulletTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Bullet" parent="." instance=ExtResource("6_nwuyl")]

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="body_entered" from="HitBox" to="." method="_on_hit_box_body_entered"]
[connection signal="body_exited" from="HitBox" to="." method="_on_hit_box_body_exited"]
[connection signal="timeout" from="BulletTimer" to="." method="_on_bullet_timer_timeout"]
